--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -4,7 +4,7 @@
 		<td>
 			<span class="date">
 				
-				<big><strong>2020</strong></big><br />
+				<big><strong>2021</strong></big><br />
 				
 			</span>
 		</td>
@@ -37,8 +37,74 @@
 	<tr>
 		<td>
 			<span class="date">
-				
+
 				<big><strong>2019</strong></big><br />
+				
+			</span>
+		</td>
+		<td class="publication">
+			<span class="language">[English] </span>
+			<span class="pubtitle">
+				<a href="/publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools"><span class="fas fa-globe"></span> Abstract</a>
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Jiyoon-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
+			</span><br />
+			<span class="authors">
+				Ji Yoon Ham.
+			</span><br />
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			<span class="links">
+			</span>
+			<span class="keywords">
+				
+						<span class="badge badge-info">Disk Imaging</span>
+						<span class="badge badge-info">Forensic Disk Imaging</span>
+						<span class="badge badge-info">Imaging Features</span>
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<!-- <big><strong>2019</strong></big><br /> -->
+				
+			</span>
+		</td>
+		<td class="publication">
+			<span class="language">[English] </span>
+			<span class="pubtitle">
+				<a href="/publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices"><span class="fas fa-globe"></span> Abstract</a>
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf">A Study on the Malicious Targeting of IoT Devices</a>.
+			</span><br />
+			<span class="authors">
+				Minjin Park.
+			</span><br />
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			<span class="links">
+			</span>
+			<span class="keywords">
+				
+						<span class="badge badge-info">AI smart speaker</span>
+						<span class="badge badge-info">Honeypot</span>
+						<span class="badge badge-info">Internet of Things</span>
+						<span class="badge badge-info">IoT device attack</span>
+						<span class="badge badge-info">IoT Forensic</span>
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<!-- <big><strong>2019</strong></big><br /> -->
 				
 			</span>
 		</td>
@@ -78,7 +144,7 @@
 		<td>
 			<span class="date">
 				
-				<big><strong>2019</strong></big><br />
+				<!-- <big><strong>2019</strong></big><br /> -->
 				
 			</span>
 		</td>
@@ -114,8 +180,8 @@
 	<tr>
 		<td>
 			<span class="date">
-				
-				<big><strong>2019</strong></big><br />
+<!-- 				
+				<big><strong>2019</strong></big><br /> -->
 				
 			</span>
 		</td>
@@ -152,7 +218,7 @@
 		<td>
 			<span class="date">
 				
-				<big><strong>2019</strong></big><br />
+				<!-- <big><strong>2019</strong></big><br /> -->
 				
 			</span>
 		</td>
@@ -185,71 +251,6 @@
 			<br />
 		</td>
 	</tr>
-	<tr>
-		<td>
-			<span class="date">
-				
-				<big><strong>2019</strong></big><br />
-				
-			</span>
-		</td>
-		<td class="publication">
-			<span class="language">[English] </span>
-			<span class="pubtitle">
-				<a href="/publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools"><span class="fas fa-globe"></span> Abstract</a>
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Jiyoon-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
-			</span><br />
-			<span class="authors">
-				Ji Yoon Ham.
-			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
-			<br />
-			<span class="links">
-			</span>
-			<span class="keywords">
-				
-						<span class="badge badge-info">Disk Imaging</span>
-						<span class="badge badge-info">Forensic Disk Imaging</span>
-						<span class="badge badge-info">Imaging Features</span>
-			</span>
-			<br />
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<span class="date">
-				
-				<big><strong>2019</strong></big><br />
-				
-			</span>
-		</td>
-		<td class="publication">
-			<span class="language">[English] </span>
-			<span class="pubtitle">
-				<a href="/publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices"><span class="fas fa-globe"></span> Abstract</a>
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf">A Study on the Malicious Targeting of IoT Devices</a>.
-			</span><br />
-			<span class="authors">
-				Minjin Park.
-			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
-			<br />
-			<span class="links">
-			</span>
-			<span class="keywords">
-				
-						<span class="badge badge-info">AI smart speaker</span>
-						<span class="badge badge-info">Honeypot</span>
-						<span class="badge badge-info">Internet of Things</span>
-						<span class="badge badge-info">IoT device attack</span>
-						<span class="badge badge-info">IoT Forensic</span>
-			</span>
-			<br />
-		</td>
-	</tr>
+
 </tbody>
 </table>
