--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -4,64 +4,123 @@
 		<td>
 			<span class="date">
 				
-				<big><strong>2021</strong></big><br />
+					<big><strong>2022</strong></big><br />
 				
 			</span>
 		</td>
 		<td class="publication">
-			<span class="language">[English] </span>
+			
+				<span class="language">[ko] </span>
 			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/lee_StudyElements_2022.pdf">A Study on Elements of Crime Facts and Visualizing the Storyline through Named Entity Recognition and Event Extraction</a>.
+				<a href="/publications/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing_the_Storyline_through_Named_Entity_Recognition_and_Event_Extraction"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Lee, Yuna and Park, Sungmi and Park, Roseop.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Annual Conference of KIPS</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[ko] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/park_StudyUtilization_2022.pdf">A Study on Utilization of Criminal Justice Information for Smart Policing with a Focus on Personal Information Protection</a>.
+				<a href="/publications/2022-A_Study_on_Utilization_of_Criminal_Justice_Information_for_Smart_Policing_with_a_Focus_on_Personal_Information_Protection"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Park, Sungmi and Ahn, Jung Mihn Jamie.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Criminal Investigation Studies 8(2)</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+					<big><strong>2021</strong></big><br />
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[ko] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/park_OnlineAccess_2021.pdf">The `Online Access to Judgment' Service in Korea: A Study on Improving Judgment Data for the Development of Legal AI(Artificial Intelligence)</a>.
+				<a href="/publications/2021-The_`Online_Access_to_Judgment'_Service_in_Korea:_A_Study_on_Improving_Judgment_Data_for_the_Development_of_Legal_AI(Artificial_Intelligence)"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Park, Sungmi and Lee, Yuna and Choi, Ari and Ahn, Jung Mihn Jamie.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Police \& Law 19(3)</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+					<big><strong>2020</strong></big><br />
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[ko] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/park_StudyImplementing_2020.pdf">A Study on Implementing a Criminal Investigation Verification Model Using Visualization</a>.
+				<a href="/publications/2020-A_Study_on_Implementing_a_Criminal_Investigation_Verification_Model_Using_Visualization"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Park, Roseop and Kim, Jion and Kim, Changsik and Park, Sungmi.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Police \& Law 18(2)</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/park_AlternativeHypothesisRetrieval_2020.pdf">Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>.
 				<a href="/publications/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining"><span class="fas fa-globe"></span> Abstract</a>
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf">Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>.
 			</span><br />
 			<span class="authors">
-				Sungmi Park.
+				Park, Sungmi.
 			</span><br />
 			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
-			<span class="links">
-			</span>
-			<span class="keywords">
-				
-						<span class="badge badge-info">Alternative Hypothesis Retrieval Model</span>
-						<span class="badge badge-info">Argument Mining</span>
-						<span class="badge badge-info">Automatic Argument Element Extraction</span>
-						<span class="badge badge-info">Crime Investigation</span>
-						<span class="badge badge-info">Investigation Verification</span>
-			</span>
-			<br />
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<span class="date">
-
-				<big><strong>2019</strong></big><br />
-				
-			</span>
-		</td>
-		<td class="publication">
-			<span class="language">[English] </span>
-			<span class="pubtitle">
-				<a href="/publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools"><span class="fas fa-globe"></span> Abstract</a>
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Jiyoon-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
-			</span><br />
-			<span class="authors">
-				Ji Yoon Ham.
-			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
-			<br />
-			<span class="links">
-			</span>
-			<span class="keywords">
-				
-						<span class="badge badge-info">Disk Imaging</span>
-						<span class="badge badge-info">Forensic Disk Imaging</span>
-						<span class="badge badge-info">Imaging Features</span>
 			</span>
 			<br />
 		</td>
@@ -70,72 +129,95 @@
 		<td>
 			<span class="date">
 				
-				<!-- <big><strong>2019</strong></big><br /> -->
-				
-			</span>
-		</td>
-		<td class="publication">
-			<span class="language">[English] </span>
-			<span class="pubtitle">
-				<a href="/publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices"><span class="fas fa-globe"></span> Abstract</a>
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf">A Study on the Malicious Targeting of IoT Devices</a>.
-			</span><br />
-			<span class="authors">
-				Minjin Park.
-			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
-			<br />
-			<span class="links">
-			</span>
-			<span class="keywords">
-				
-						<span class="badge badge-info">AI smart speaker</span>
-						<span class="badge badge-info">Honeypot</span>
-						<span class="badge badge-info">Internet of Things</span>
-						<span class="badge badge-info">IoT device attack</span>
-						<span class="badge badge-info">IoT Forensic</span>
-			</span>
-			<br />
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<span class="date">
-				
-				<!-- <big><strong>2019</strong></big><br /> -->
+					<big><strong>2019</strong></big><br />
 				
 			</span>
 		</td>
 		<td class="publication">
 			
-				<span class="language">[English] </span>
+				<span class="language">[en] </span>
 			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/ham_FeatureComparison_2019.pdf">A Feature Comparison of Modern Digital Forensic Imaging Software</a>.
+				<a href="/publications/2019-A_Feature_Comparison_of_Modern_Digital_Forensic_Imaging_Software"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Ham, Jiyoon and James, Joshua.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">The Journal of The Institute of Internet, Broadcasting and Communication 19(6)</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[en] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/nemayire_2018Samsung_2019.pdf">A 2018 Samsung Smart TV Data Acquisition Method Analysis</a>.
+				<a href="/publications/2019-A_2018_Samsung_Smart_TV_Data_Acquisition_Method_Analysis"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Nemayire, Terrence and Ogbole, Alex and Park, Sungmi and Kim, Keecheol and Jeong, Yeonseok and Jang, Yunsik.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Digital Forensics 13(3)</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[en] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/park_PreliminaryStudy_2019.pdf">Preliminary Study of a Google Home Mini</a>.
+				<a href="/publications/2019-Preliminary_Study_of_a_Google_Home_Mini"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Park, Minjin and James, Joshua I..
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Journal of Digital Forensics 13(3)</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/Birhanu2019.pdf">Smart Home IoT Forensics</a>.
 				<a href="/publications/2019-Smart_Home_IoT_Forensics"><span class="fas fa-globe"></span> Abstract</a>
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart_Home_IoT_Forensics.pdf">Smart Home IoT Forensics</a>.
 			</span><br />
 			<span class="authors">
-				Addisu Afework Birhanu.
+				Birhanu, Addisu Afework.
 			</span><br />
 			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
-			<span class="links">
-			</span>
-			<span class="keywords">
-				
-						<span class="badge badge-info">App Data Security</span>
-						<span class="badge badge-info">Cloud API Security</span>
-						<span class="badge badge-info">Cloud Data</span>
-						<span class="badge badge-info">Digital Forensic Investigation</span>
-						<span class="badge badge-info">Internet of Things</span>
-						<span class="badge badge-info">IoT</span>
-						<span class="badge badge-info">IoT Security</span>
-						<span class="badge badge-info">Network Forensics</span>
-						<span class="badge badge-info">Privacy</span>
-						<span class="badge badge-info">Smart Home</span>
 			</span>
 			<br />
 		</td>
@@ -144,35 +226,21 @@
 		<td>
 			<span class="date">
 				
-				<!-- <big><strong>2019</strong></big><br /> -->
-				
 			</span>
 		</td>
 		<td class="publication">
 			
-				<span class="language">[English] </span>
 			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/Jang2019.pdf">A Study on Internet of Things (IoT) Forensic</a>.
 				<a href="/publications/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic"><span class="fas fa-globe"></span> Abstract</a>
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Subong-A_Study_on_Internet_of_Things_Forensics.pdf">A Study on Internet of Things (IoT) Forensic</a>.
 			</span><br />
 			<span class="authors">
-				Subong Jang.
+				Jang, Subong.
 			</span><br />
 			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
-			<span class="links">
-			</span>
-			<span class="keywords">
-				
-						<span class="badge badge-info">Client-side Acquisition</span>
-						<span class="badge badge-info">Cloud Acquisition</span>
-						<span class="badge badge-info">Device Acquisition</span>
-						<span class="badge badge-info">Internet of things forensic</span>
-						<span class="badge badge-info">IoT Forensic</span>
-						<span class="badge badge-info">IoT data acquisition</span>
-						<span class="badge badge-info">Network Acquisition</span>
 			</span>
 			<br />
 		</td>
@@ -180,36 +248,22 @@
 	<tr>
 		<td>
 			<span class="date">
-<!-- 				
-				<big><strong>2019</strong></big><br /> -->
 				
 			</span>
 		</td>
 		<td class="publication">
 			
-				<span class="language">[English] </span>
 			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/Brhan2019.pdf">API-Based Cloud Data Acquisition and Analysis from Smart Home IoT Environments</a>.
 				<a href="/publications/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments"><span class="fas fa-globe"></span> Abstract</a>
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Yohannes-API_Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.pdf">API-Based Cloud Data Acquisition and Analysis from Smart Home IoT Environments</a>.
 			</span><br />
 			<span class="authors">
-				Yohannes Yemane Brhan.
+				Brhan, Yohannes Yemane.
 			</span><br />
 			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
-			<span class="links">
-			</span>
-			<span class="keywords">
-				
-						<span class="badge badge-info">API-based cloud data acquisition</span>
-						<span class="badge badge-info">Amazon Alexa forensics</span>
-						<span class="badge badge-info">Cloud forensics</span>
-						<span class="badge badge-info">Google Assistant forensics</span>
-						<span class="badge badge-info">IoT forensics</span>
-						<span class="badge badge-info">SmartThings forensics</span>
-						<span class="badge badge-info">cloud acquisition tool</span>
 			</span>
 			<br />
 		</td>
@@ -218,39 +272,96 @@
 		<td>
 			<span class="date">
 				
-				<!-- <big><strong>2019</strong></big><br /> -->
+			</span>
+		</td>
+		<td class="publication">
+			
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/Bukola2019.pdf">A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>.
+				<a href="/publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Bukola, Ajayi Betty.
+			</span><br />
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
 				
 			</span>
 		</td>
 		<td class="publication">
 			
-				<span class="language">[English] </span>
 			<span class="pubtitle">
-				<a href="/publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria"><span class="fas fa-globe"></span> Abstract</a>
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Betty-A_Study_on_MLA_Request_Effectiveness.pdf">A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>.
+				<a href="https://lifs.ac.kr/pubs/ham_StudyDigitalForensic_2019.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
+				<a href="/publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
-				Ajayi Betty Bukola.
+				Ham, Ji Yoon.
 			</span><br />
 			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
-			<span class="links">
-			</span>
-			<span class="keywords">
-				
-						<span class="badge badge-info">Cybercrime</span>
-						<span class="badge badge-info">Cybercrime Investigations</span>
-						<span class="badge badge-info">Law</span>
-						<span class="badge badge-info">MLA</span>
-						<span class="badge badge-info">MLAT</span>
-						<span class="badge badge-info">Transnational Crime</span>
-						<span class="badge badge-info">Enforcement.</span>
 			</span>
 			<br />
 		</td>
 	</tr>
-
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/park_StudyMaliciousTargeting_2019.pdf">A Study on the Malicious Targeting of IoT Devices</a>.
+				<a href="/publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Park, Minjin.
+			</span><br />
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+					<big><strong>2018</strong></big><br />
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[en] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.ac.kr/pubs/park_ComparativeStudy_2018.pdf">A Comparative Study on Data Protection Legislations and Government Standards to Implement Digital Forensic Readiness as Mandatory Requirement</a>.
+				<a href="/publications/2018-A_Comparative_Study_on_Data_Protection_Legislations_and_Government_Standards_to_Implement_Digital_Forensic_Readiness_as_Mandatory_Requirement"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Park, Sungmi and Akatyev, Nikolay and Jang, Yunsik and Hwang, Jisoo and Kim, Donghyun and Yu, Woonseon and Shin, Hyunwoo and Han, Changhee and Kim, Jonghyun.
+			</span><br />
+			<span class="venuetype"></span><span class="venue">Digital Investigation</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
 </tbody>
 </table>
