fixed publications error

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -14,7 +14,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/lee_StudyElements_2022.pdf">A Study on Elements of Crime Facts and Visualizing the Storyline through Named Entity Recognition and Event Extraction</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/lee_studyelements_2022.pdf">A Study on Elements of Crime Facts and Visualizing the Storyline through Named Entity Recognition and Event Extraction</a>.
 				<a href="/publications/2022-A_Study_on_Elements_of_Crime_Facts_and_Visualizing_the_Storyline_through_Named_Entity_Recognition_and_Event_Extraction"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -38,7 +38,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_StudyUtilization_2022.pdf">A Study on Utilization of Criminal Justice Information for Smart Policing with a Focus on Personal Information Protection</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_studyutilization_2022.pdf">A Study on Utilization of Criminal Justice Information for Smart Policing with a Focus on Personal Information Protection</a>.
 				<a href="/publications/2022-A_Study_on_Utilization_of_Criminal_Justice_Information_for_Smart_Policing_with_a_Focus_on_Personal_Information_Protection"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -64,7 +64,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_OnlineAccess_2021.pdf">The `Online Access to Judgment' Service in Korea: A Study on Improving Judgment Data for the Development of Legal AI(Artificial Intelligence)</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_onlineaccess_2021.pdf">The `Online Access to Judgment' Service in Korea: A Study on Improving Judgment Data for the Development of Legal AI(Artificial Intelligence)</a>.
 				<a href="/publications/2021-The_`Online_Access_to_Judgment'_Service_in_Korea:_A_Study_on_Improving_Judgment_Data_for_the_Development_of_Legal_AI(Artificial_Intelligence)"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -90,7 +90,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_StudyImplementing_2020.pdf">A Study on Implementing a Criminal Investigation Verification Model Using Visualization</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_studyimplementing_2020.pdf">A Study on Implementing a Criminal Investigation Verification Model Using Visualization</a>.
 				<a href="/publications/2020-A_Study_on_Implementing_a_Criminal_Investigation_Verification_Model_Using_Visualization"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -113,7 +113,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_AlternativeHypothesisRetrieval_2020.pdf">Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_alternativehypothesisretrieval_2020.pdf">Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>.
 				<a href="/publications/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -139,7 +139,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/ham_FeatureComparison_2019.pdf">A Feature Comparison of Modern Digital Forensic Imaging Software</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/ham_featurecomparison_2019.pdf">A Feature Comparison of Modern Digital Forensic Imaging Software</a>.
 				<a href="/publications/2019-A_Feature_Comparison_of_Modern_Digital_Forensic_Imaging_Software"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -163,7 +163,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/nemayire_2018Samsung_2019.pdf">A 2018 Samsung Smart TV Data Acquisition Method Analysis</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/nemayire_2018samsung_2019.pdf">A 2018 Samsung Smart TV Data Acquisition Method Analysis</a>.
 				<a href="/publications/2019-A_2018_Samsung_Smart_TV_Data_Acquisition_Method_Analysis"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -187,7 +187,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_PreliminaryStudy_2019.pdf">Preliminary Study of a Google Home Mini</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_preliminarystudy_2019.pdf">Preliminary Study of a Google Home Mini</a>.
 				<a href="/publications/2019-Preliminary_Study_of_a_Google_Home_Mini"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -210,7 +210,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/Birhanu2019.pdf">Smart Home IoT Forensics</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/birhanu2019.pdf">Smart Home IoT Forensics</a>.
 				<a href="/publications/2019-Smart_Home_IoT_Forensics"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -233,7 +233,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/Jang2019.pdf">A Study on Internet of Things (IoT) Forensic</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/jang2019.pdf">A Study on Internet of Things (IoT) Forensic</a>.
 				<a href="/publications/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -256,7 +256,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/Brhan2019.pdf">API-Based Cloud Data Acquisition and Analysis from Smart Home IoT Environments</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/brhan2019.pdf">API-Based Cloud Data Acquisition and Analysis from Smart Home IoT Environments</a>.
 				<a href="/publications/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -279,7 +279,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/Bukola2019.pdf">A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/bukola2019.pdf">A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>.
 				<a href="/publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -302,7 +302,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/ham_StudyDigitalForensic_2019.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/ham_studydigitalforensic_2019.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
 				<a href="/publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -325,7 +325,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_StudyMaliciousTargeting_2019.pdf">A Study on the Malicious Targeting of IoT Devices</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_studymalicioustargeting_2019.pdf">A Study on the Malicious Targeting of IoT Devices</a>.
 				<a href="/publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -351,7 +351,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.ac.kr/pubs/park_ComparativeStudy_2018.pdf">A Comparative Study on Data Protection Legislations and Government Standards to Implement Digital Forensic Readiness as Mandatory Requirement</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_comparativestudy_2018.pdf">A Comparative Study on Data Protection Legislations and Government Standards to Implement Digital Forensic Readiness as Mandatory Requirement</a>.
 				<a href="/publications/2018-A_Comparative_Study_on_Data_Protection_Legislations_and_Government_Standards_to_Implement_Digital_Forensic_Readiness_as_Mandatory_Requirement"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
