fixed links between people and publications

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -64,7 +64,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/park_onlineaccess_2021.pdf">The 'Online Access to Judgment' Service in Korea: A Study on Improving Judgment Data for the Development of Legal AI(Artificial Intelligence)</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_onlineaccess_2021.pdf">The Online Access to Judgment Service in Korea A Study on Improving Judgment Data for the Development of Legal AIArtificial Intelligence</a>.
 				<a href="/publications/2021-The_'Online_Access_to_Judgment'_Service_in_Korea:_A_Study_on_Improving_Judgment_Data_for_the_Development_of_Legal_AI(Artificial_Intelligence)"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
@@ -234,7 +234,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/jang2019.pdf">A Study on Internet of Things (IoT) Forensic</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/jang2019.pdf">A Study on Internet of Things IoT Forensic</a>.
 				<a href="/publications/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
