updated language variable

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -110,7 +110,7 @@
 		</td>
 		<td class="publication">
 			
-				<span class="language">[English] </span>
+				<span class="language">[en] </span>
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
@@ -208,6 +208,7 @@
 		</td>
 		<td class="publication">
 			
+				<span class="language">[en] </span>
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
@@ -231,6 +232,7 @@
 		</td>
 		<td class="publication">
 			
+				<span class="language">[en] </span>
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
@@ -254,6 +256,7 @@
 		</td>
 		<td class="publication">
 			
+				<span class="language">[en] </span>
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
@@ -277,6 +280,7 @@
 		</td>
 		<td class="publication">
 			
+				<span class="language">[en] </span>
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
@@ -300,6 +304,7 @@
 		</td>
 		<td class="publication">
 			
+				<span class="language">[en] </span>
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
@@ -323,6 +328,7 @@
 		</td>
 		<td class="publication">
 			
+				<span class="language">[en] </span>
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
