--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -64,8 +64,8 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/park_onlineaccess_2021.pdf">The Online Access to Judgment Service in Korea A Study on Improving Judgment Data for the Development of Legal AIArtificial Intelligence</a>.
-				<a href="/publications/2021-The_'Online_Access_to_Judgment'_Service_in_Korea:_A_Study_on_Improving_Judgment_Data_for_the_Development_of_Legal_AI(Artificial_Intelligence)"><span class="fas fa-globe"></span> Abstract</a>
+				<a href="https://lifs.hallym.ac.kr/pubs/park_onlineaccess_2021.pdf">The Online Access to Judgment Service in Korea A Study on Improving Judgment Data for the Development of Legal AI</a>.
+				<a href="/publications/2021-The_'Online_Access_to_Judgment'_Service_in_Korea:_A_Study_on_Improving_Judgment_Data_for_the_Development_of_Legal_AI"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
 				Park, Sungmi and Lee, Yuna and Choi, Ari and Ahn, Jung Mihn Jamie.
@@ -81,6 +81,30 @@
 			<span class="date">
 				
 					<big><strong>2020</strong></big><br />
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[en] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/park_alternativehypothesis_2020.pdf">Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>.
+				<a href="/publications/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Park, Sungmi.
+			</span><br />
+			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
 				
 			</span>
 		</td>
@@ -106,6 +130,8 @@
 		<td>
 			<span class="date">
 				
+					<big><strong>2019</strong></big><br />
+				
 			</span>
 		</td>
 		<td class="publication">
@@ -114,13 +140,13 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/park_alternativehypothesisretrieval_2020.pdf">Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>.
-				<a href="/publications/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining"><span class="fas fa-globe"></span> Abstract</a>
+				<a href="https://lifs.hallym.ac.kr/pubs/birhanu_smarthome_2019.pdf">Smart Home IoT Forensics</a>.
+				<a href="/publications/2019-Smart_Home_IoT_Forensics"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
-				Park, Sungmi.
+				Birhanu, Addisu Afework.
 			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -130,7 +156,53 @@
 		<td>
 			<span class="date">
 				
-					<big><strong>2019</strong></big><br />
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[en] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/brhan_apibasedcloud_2019.pdf">API-Based Cloud Data Acquisition and Analysis from Smart Home IoT Environments</a>.
+				<a href="/publications/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Brhan, Yohannes Yemane.
+			</span><br />
+			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[en] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/bukola_studymla_2019.pdf">A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>.
+				<a href="/publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Bukola, Ajayi Betty.
+			</span><br />
+			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
 				
 			</span>
 		</td>
@@ -147,6 +219,54 @@
 				Ham, Jiyoon and James, Joshua.
 			</span><br />
 			<span class="venuetype"></span><span class="venue">The Journal of The Institute of Internet, Broadcasting and Communication 19(6)</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[en] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/ham_studydigital_2019.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
+				<a href="/publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Ham, Ji Yoon.
+			</span><br />
+			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[en] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/jang_studyinternet_2019.pdf">A Study on Internet of Things (IoT) Forensic</a>.
+				<a href="/publications/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Jang, Subong.
+			</span><br />
+			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -212,133 +332,13 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/birhanu2019.pdf">Smart Home IoT Forensics</a>.
-				<a href="/publications/2019-Smart_Home_IoT_Forensics"><span class="fas fa-globe"></span> Abstract</a>
-			</span><br />
-			<span class="authors">
-				Birhanu, Addisu Afework.
-			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
-			<br />
-			</span>
-			<br />
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<span class="date">
-				
-			</span>
-		</td>
-		<td class="publication">
-			
-				<span class="language">[en] </span>
-			<span class="pubtitle">
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/jang2019.pdf">A Study on Internet of Things IoT Forensic</a>.
-				<a href="/publications/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic"><span class="fas fa-globe"></span> Abstract</a>
-			</span><br />
-			<span class="authors">
-				Jang, Subong.
-			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
-			<br />
-			</span>
-			<br />
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<span class="date">
-				
-			</span>
-		</td>
-		<td class="publication">
-			
-				<span class="language">[en] </span>
-			<span class="pubtitle">
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/brhan2019.pdf">API-Based Cloud Data Acquisition and Analysis from Smart Home IoT Environments</a>.
-				<a href="/publications/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments"><span class="fas fa-globe"></span> Abstract</a>
-			</span><br />
-			<span class="authors">
-				Brhan, Yohannes Yemane.
-			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
-			<br />
-			</span>
-			<br />
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<span class="date">
-				
-			</span>
-		</td>
-		<td class="publication">
-			
-				<span class="language">[en] </span>
-			<span class="pubtitle">
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/bukola2019.pdf">A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>.
-				<a href="/publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria"><span class="fas fa-globe"></span> Abstract</a>
-			</span><br />
-			<span class="authors">
-				Bukola, Ajayi Betty.
-			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
-			<br />
-			</span>
-			<br />
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<span class="date">
-				
-			</span>
-		</td>
-		<td class="publication">
-			
-				<span class="language">[en] </span>
-			<span class="pubtitle">
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/ham_studydigitalforensic_2019.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
-				<a href="/publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools"><span class="fas fa-globe"></span> Abstract</a>
-			</span><br />
-			<span class="authors">
-				Ham, Ji Yoon.
-			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
-			<br />
-			</span>
-			<br />
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<span class="date">
-				
-			</span>
-		</td>
-		<td class="publication">
-			
-				<span class="language">[en] </span>
-			<span class="pubtitle">
-				<img src="/img/pdficon_small.png" width="16"
-					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/park_studymalicioustargeting_2019.pdf">A Study on the Malicious Targeting of IoT Devices</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/park_studymalicious_2019.pdf">A Study on the Malicious Targeting of IoT Devices</a>.
 				<a href="/publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
 				Park, Minjin.
 			</span><br />
-			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -365,6 +365,30 @@
 				Park, Sungmi and Akatyev, Nikolay and Jang, Yunsik and Hwang, Jisoo and Kim, Donghyun and Yu, Woonseon and Shin, Hyunwoo and Han, Changhee and Kim, Jonghyun.
 			</span><br />
 			<span class="venuetype"></span><span class="venue">Digital Investigation</span>.
+			<br />
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+				<span class="language">[ko] </span>
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/won_reasoningvisualization_2018.pdf">The Reasoning Visualization Model for Rational Crime Analysis and Fact Finding - A Study on Error Detection of Reasoning in Fact Finding</a>.
+				<a href="/publications/2018-The_Reasoning_Visualization_Model_for_Rational_Crime_Analysis_and_Fact_Finding_-_A_Study_on_Error_Detection_of_Reasoning_in_Fact_Finding"><span class="fas fa-globe"></span> Abstract</a>
+			</span><br />
+			<span class="authors">
+				Won, Gwangjae.
+			</span><br />
+			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
