fixed special char issue

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -65,7 +65,7 @@
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
 				<a href="https://lifs.hallym.ac.kr/pubs/park_onlineaccess_2021.pdf">The Online Access to Judgment Service in Korea A Study on Improving Judgment Data for the Development of Legal AI</a>.
-				<a href="/publications/2021-The_'Online_Access_to_Judgment'_Service_in_Korea:_A_Study_on_Improving_Judgment_Data_for_the_Development_of_Legal_AI"><span class="fas fa-globe"></span> Abstract</a>
+				<a href="/publications/2021-The_Online_Access_to_Judgment_Service_in_Korea_A_Study_on_Improving_Judgment_Data_for_the_Development_of_Legal_AI"><span class="fas fa-globe"></span> Abstract</a>
 			</span><br />
 			<span class="authors">
 				Park, Sungmi and Lee, Yuna and Choi, Ari and Ahn, Jung Mihn Jamie.
